zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__edit_scrollback_for_pane_with_id_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 7127
expression: "format!(\"{:#?}\", rerun_command_pane_event)"
---
Some(
    EditScrollbackForPaneWithId(
        Terminal(
            2,
        ),
    ),
)
