zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__generate_random_name_permission_denied.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_with_name)"
---
None
