zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__generate_random_name_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Generated name\n\r",
)
