zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__get_focused_pane_info_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", focused_pane_info_query)"
---
Some(
    GetFocusedPaneInfo {
        client_id: 1,
        response_channel: Sender { .. },
    },
)
